# Platformer

./: CMakeLists.txt  CTimer.cpp  CTimer.h
SFML-2.5.1-Compiled/: AddSFML.cmake
SFML-2.5.1-Compiled/include/SFML/Graphics/: Font.hpp  Texture.hpp  VertexBuffer.hpp
SFML-2.5.1-Compiled/include/SFML/Network/: SocketSelector.hpp
SFML-2.5.1-Compiled/include/SFML/System/: String.hpp
SFML-2.5.1-Compiled/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
SFML-2.5.1-Compiled/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
Sources/: CEntity.cpp  CGameController.cpp  CGameModel.cpp  CGameView.cpp  CHitBox.cpp  CMapObject.cpp  CPlayer.cpp  MATH.cpp  main.cpp
include/: MATH.h
include/Headers/: CEntity.h  CGameController.h  CGameModel.h  CGameView.h  CHitBox.h  CMapObject.h  CPlayer.h
